密码使用md5加密

--- a/.env.production
+++ b/.env.production
@@ -1,9 +1,6 @@
 # 生产环境配置
 NODE_ENV = "production"
 
-VITE_APP_SYS_NAME = "广西特检院桂林分院数字化平台"
+# VITE_APP_BASE_URL ="http://192.168.63.130:8100/api"
 
-VITE_APP_BASE_URL ="http://43.139.119.217:8080/api"
-
-VITE_APP_ACCESS_PATH = "/equipment"
-
+VITE_APP_ACCESS_PATH = ""
