--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "@ant-design/pro-components": "^2.6.10",
     "antd": "^5.8.0",
     "axios": "^1.4.0",
+    "crypto-js": "^4.1.1",
     "file-saver": "^2.0.5",
     "history": "^5.3.0",
+    "mobx": "^6.6.1",
+    "mobx-persist-store": "^1.0.6",
+    "mobx-react-lite": "^3.4.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
-    "sass": "^1.64.2",
-    "mobx": "^6.6.1",
-    "mobx-persist-store": "^1.0.6",
-    "mobx-react-lite": "^3.4.0"
+    "sass": "^1.64.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
